# crewai_flow-

./: .env.example  The_Current_State_of_AI_in_September_2024_-_Trends_Across_Industries.md  pyproject.toml
src/book/: main.py
src/book/crews/llm/: llms.py
src/book/crews/outline_book_crew/: outline_crew.py
src/book/crews/outline_book_crew/config/: agents.yaml  tasks.yaml
src/book/crews/write_book_chapter_crew/: write_book_chapter_crew.py
src/book/crews/write_book_chapter_crew/config/: agents.yaml  tasks.yaml
