[project]
name = "book"
version = "0.1.0"
description = "book using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "crewai[tools]>=0.86.0,<1.0.0",
    "icecream>=2.1.3",
]

[project.scripts]
kickoff = "book.main:kickoff"
plot = "book.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
